--- a/src/app/authorization/authorization.component.html
+++ b/src/app/authorization/authorization.component.html
@@ -1,3 +1,14 @@
 <div class="wrapper">
+  <div class="info">
+    <app-logo class="logo" color1="black" color2="white"></app-logo>
 
+    <h2>Digit Docs</h2>
+    <p>
+      Сервіс для цифрового докуметообігу<br>
+      Безпека.Швидкість.Надійність.
+    </p>
+  </div>
+  <div class="card">
+    <router-outlet></router-outlet>
+  </div>
 </div>
