--- a/src/app/authorization/components/sign-up/sign-up.component.html
+++ b/src/app/authorization/components/sign-up/sign-up.component.html
@@ -27,7 +27,7 @@
       <mat-card-footer>
         <mat-card-actions align="end">
           <button mat-button (click)="redirectToLogin()">Увійти</button>
-          <button mat-raised-button (click)="register()">Зареєструватись &nbsp;&nbsp;<mat-icon>arrow_right_alt</mat-icon></button>
+          <button mat-raised-button [disabled]="form.invalid" (click)="register()">Зареєструватись &nbsp;&nbsp;<mat-icon>arrow_right_alt</mat-icon></button>
         </mat-card-actions>
       </mat-card-footer>
     </mat-card>
