--- a/src/styles.css
+++ b/src/styles.css
@@ -8,3 +8,8 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   padding: 25px;
   border-radius: 15px;
 }
+
+.snackbar_error {
+  background: #f34336;
+  color: white;
+}
