--- a/src/styles.scss
+++ b/src/styles.scss
@@ -17,6 +17,11 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   color: white;
 }
 
+.snackbar_success {
+  background: #72b944;
+  color: white;
+}
+
 p-dataview {
   width: 100vw;
 }
