--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -27,3 +27,43 @@
     background: red;
   }
 }
+
+.autocomplete-wrap {
+  display: flex;
+  justify-content: center;
+}
+
+.circle-check {
+  margin-top: 25px;
+  font-size: 5rem;
+  color: green;
+  margin-bottom: 25px;
+}
+
+.file-wrapper {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 15px;
+  margin-top: 20px;
+
+
+  input[type=file] {
+    position: absolute;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    right: 0;
+    opacity: 0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    z-index: 100000;
+  }
+
+  label {
+    display: block;
+    cursor: pointer;
+  }
+}
