--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -69,3 +69,12 @@
     cursor: pointer;
   }
 }
+
+.sidebar-option {
+  padding: 10px 20px;
+  cursor: pointer;
+
+  &:hover {
+    background: darkgray;
+  }
+}
