--- a/src/app/authorization/components/log-in/log-in.component.html
+++ b/src/app/authorization/components/log-in/log-in.component.html
@@ -2,7 +2,7 @@
   <form [formGroup]="form">
     <mat-card class="authorization-card">
       <mat-card-header>
-        <mat-card-title>Вхід</mat-card-title>
+        <mat-card-title>Log In</mat-card-title>
       </mat-card-header>
 
       <mat-card-content class="content">
@@ -11,15 +11,15 @@
           <input matInput formControlName="email">
         </mat-form-field>
         <mat-form-field appearance="outline">
-          <mat-label>Пароль</mat-label>
+          <mat-label>Password</mat-label>
           <input matInput type="password" formControlName="password">
         </mat-form-field>
       </mat-card-content>
 
       <mat-card-footer>
         <mat-card-actions align="end">
-          <button mat-button type="button" (click)="redirectToSignUp()">Зареєструватись</button>
-          <button mat-raised-button type="submit" [disabled]="form.invalid" (click)="login()">Продовжити &nbsp;&nbsp;<mat-icon>arrow_right_alt</mat-icon></button>
+          <button mat-button type="button" (click)="redirectToSignUp()">Sign Up</button>
+          <button mat-raised-button type="submit" [disabled]="form.invalid" (click)="login()">Log In &nbsp;&nbsp;<mat-icon>arrow_right_alt</mat-icon></button>
         </mat-card-actions>
       </mat-card-footer>
     </mat-card>
