--- a/src/app/dashboard/dashboard.component.scss
+++ b/src/app/dashboard/dashboard.component.scss
@@ -42,6 +42,12 @@
   margin-bottom: 25px;
 }
 
+.users-icon {
+  margin-top: 25px;
+  font-size: 5rem;
+  margin-bottom: 25px;
+}
+
 .file-wrapper {
   display: flex;
   flex-direction: column;
